updated the code

--- a/force-app/main/default/lwc/learningCSSandHTM/learningCSSandHTM.css
+++ b/force-app/main/default/lwc/learningCSSandHTM/learningCSSandHTM.css
@@ -10,3 +10,14 @@
     padding-left: 30px;
     margin: 20px;
 }
+.myClass2{
+    background-color: navajowhite;
+    font-size: 30px;
+    text-align: left;
+    text-decoration: dotted;
+    text-decoration-color: crimson;
+    height: 100px;
+    padding-top: 20px;
+    padding-left: 30px;
+    margin: 20px;
+}
